services/apps/sample-nginx/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-nginx
  namespace: apps
  labels:
    app: sample-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-nginx
  template:
    metadata:
      labels:
        app: sample-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
