services/apps/sample-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nginx
  namespace: apps
spec:
  selector:
    app: sample-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
