services/apps/sample-nginx/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-nginx
  namespace: apps
spec:
  parentRefs:
    - name: sample-nginx-gateway
      namespace: cloudijs-system
      sectionName: test-cloudijs-nl-http
    - name: sample-nginx-gateway
      namespace: cloudijs-system
      sectionName: test-cloudijs-nl-https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sample-nginx
          port: 80
