services/apps/sample-nginx/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-nginx
  namespace: apps
spec:
  hostnames:
    - test.cloudijs.nl
  parentRefs:
    - name: shared-gateway-http
      namespace: cloudijs-system
  rules:
    - backendRefs:
        - name: sample-nginx
          port: 80
